<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="@string/my_data_header">
        <EditTextPreference
            android:title="@string/correo_electronico"
            android:key="email2"
            android:summary="@string/descripcion_correo"
            android:dialogTitle="@string/texto_cuadro_correo"
            />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/options_header">
        <CheckBoxPreference
            android:title="@string/activar_sonido"
            android:key="sonido"
            android:summaryOn="@string/descripcion_activar_sonido_on"
            android:summaryOff="@string/descripcion_activar_sonido_off"
            android:defaultValue="false"/>

        <ListPreference
            app:title="@string/sexo"
            app:key="sex"
            app:summary="@string/descripcion_sexo"
            android:entries="@array/entradas_sexo"
            android:entryValues="@array/valores_sexo"
            />

        <MultiSelectListPreference
            app:title="@string/aficiones"
            app:key="gustos"
            app:summary="@string/descripcion_aficiones"
            android:entries="@array/entradas_aficiones"
            android:entryValues="@array/valores_aficiones"
            />

        <SwitchPreference
            app:title="@string/activar_notificaciones"
            app:summary="@string/descripcion_activar_notificaciones"
            app:key="notificaciones"
            />
    </PreferenceCategory>


</PreferenceScreen>